# A3-Self-Supervised-Learning

./: .gitignore  A3_assignment.md  README.md  pyproject.toml  run.py  scripts.ps1  scripts.sh
lab_note/: A3-Self-Supervised-Learning.ipynb
notebooks/: A3_Self_Supervised_Learning.ipynb
results/: results.json
src/: __init__.py  data.py  evaluate.py  figures.py  pipeline.py  train.py  utils.py  visualize.py
src/models/: __init__.py  dino.py  mae.py  simclr.py
